# trajectory_generator

./: CMakeLists.txt  package.xml
config/: roomba5_param.yaml
include/trajectory_generator/: trajectory_generator.h
launch/: bag_play.launch  roomba.launch  trajectory_generator.launch
msg/: Path.msg  PathArray.msg
rviz/: bag_play.rviz
src/: trajectory_generator.cpp  trajectory_generator_node.cpp
