<?xml version="1.0"?>
<package format="2">
  <name>trajectory_generator</name>
  <version>0.0.0</version>
  <description>The trajectory_generator package</description>

  <maintainer email="ren@todo.todo">ren</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
